<resources>
    <!-- General Strings -->
    <string name="greeting">Hola, %1$s</string>
    <string name="busca_aqui">Busca aquí</string>
    <string name="ciencia_ficci_n_y_fantas_a">Ciencia ficción y Fantasía</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="recomendados_para_ti">Recomendados para ti</string>
    <string name="menu_icon">Icono del menú</string>
    <string name="open">open\n</string>
    <string name="close">close\n</string>
    <string name="autoayuda">Autoayuda</string>
    <string name="novela">Novela</string>
    <string name="inicio">Inicio</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="las_vidas_dentro_de_tu_cabeza">Las vidas dentro de tu cabeza</string>
    <string name="el_nombre_del_viento">El nombre del viento</string>
    <string name="harry_potter_y_la_piedra_filosofal">Harry Potter y la piedra filosofal</string>
    <string name="h_bitos_at_micos">Hábitos atómicos</string>
    <string name="lo_que_el_viento_se_llev">Lo que el viento se llevó</string>

    <!-- BookDetailActivity Strings -->
    <string name="agregar_al_carrito">Agregar al carrito</string>

    <!-- BookItem Strings -->
    <string name="book_cover">Portada del libro</string>
    <string name="book_title">Book Title</string>
    <string name="app_name">libros\n</string>
    <string name="author_name">Author Name</string>
    <string name="_9_99">$9.99</string>

    <!-- CartItem Strings -->
    <string name="carrito">Carrito</string>
    <string name="cart">Carrito</string>
    <string name="check_out">Comprar</string>
    <string name="price">precio\n</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="item_count">Items en el carrito: %1$d</string>
    <string name="total_price">Total: $%1$s</string>
    <string name="quantity">quantity</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">email</string>
</resources>