<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:ignore="NamespaceTypo">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/harry_potter_piedra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/book_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/book_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        app:layout_constraintTop_toTopOf="@id/book_cover"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/author_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        app:layout_constraintTop_toBottomOf="@id/book_title" />

    <TextView
        android:id="@+id/book_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_9_99"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        app:layout_constraintTop_toBottomOf="@id/book_author" />

</androidx.constraintlayout.widget.ConstraintLayout>
