<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:src="@drawable/harry_potter_piedra" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$9.99"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/book_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="14sp"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/decrease_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_decrease_black"
            app:tint="@android:color/black" />

        <TextView
            android:id="@+id/item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="8dp" />

        <ImageView
            android:id="@+id/increase_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_increase_black"
            app:tint="@android:color/black" />
    </LinearLayout>
</LinearLayout>
